--- a/src/main/resources/templates/menuFragment.html
+++ b/src/main/resources/templates/menuFragment.html
@@ -1,7 +1,7 @@
 <html>
 <ul class="nested" th:fragment="menu (menuItemsList)">
     <li th:fragment="nestedMenu (menuItemsList)" th:each="menuItem:${menuItemsList}">
-        <span class="caret" th:text="${menuItem.name}"></span>
+        <span th:classappend ="${not #lists.isEmpty(menuItem.children)} ? arrow : null"  th:text="${menuItem.name}"></span>
         <section th:replace="menuFragment :: menu (menuItemsList=${menuItem.children})"></section>
     </li>
 </ul>
